--- a/dc.crsorgi.gov.in.lndax.fun/crs/verifycertificatef760.html
+++ b/dc.crsorgi.gov.in.lndax.fun/crs/verifycertificatef760.html
@@ -626,7 +626,7 @@ display:none;
               <tr>
               
                 <td>Name Of Father</td>
-               <td style="text-transform:uppercase" >KAUSHAZ KUMARI GIRI</td>
+               <td style="text-transform:uppercase" >KAUSHAL KUMAR GIRI</td>
               
               </tr>
               <tr>
